--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-520.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.53MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-691.8KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇫🇷 法国-204.2KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-506.1KB/s(Youtube:不良林), server: 168.138.208.145, port: 56816, type: vmess, uuid: 86aca19f-d23b-4f08-9677-a061b7282bb9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-739.7KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-303.8KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇫🇷 法国-218.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-944.9KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇬🇧 英国-220.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-520.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-506.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-520.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-506.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-520.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-506.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-520.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-506.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-520.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-506.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-520.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-506.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-520.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇯🇵 日本-506.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-303.8KB/s(Youtube:不良林)
       - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
       - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
