--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.53MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-691.8KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-204.2KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-739.7KB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-218.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-944.9KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇬🇧 英国-220.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-3.17MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-829.8KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.36MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-827.0KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-901.0KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-615.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇦🇺 澳大利亚-355.4KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-398.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-901.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-615.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-355.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-398.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-901.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-615.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-355.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-398.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-901.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-615.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-355.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-398.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-901.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-615.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-355.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-398.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-901.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-615.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-355.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-398.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-901.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-615.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-355.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-398.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-691.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-204.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-739.7KB/s(Youtube:不良林)
-      - 🇫🇷 法国-218.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-944.9KB/s(Youtube:不良林)
-      - 🇬🇧 英国-220.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-827.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-901.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-615.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-355.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-398.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
